[package]
name = "gql-gateway"
version = "0.1.0"
authors = ["Jonathan <jonathan@timada.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.52"
serde_derive = "1.0.52"
serde_json = "1.0.52"
graphql-parser = "0.3.0"
async-trait = "0.1.30"
futures = "0.3.4"
thiserror = "1.0.16"

[dev-dependencies]
lazy_static = "1.4.0"
async-graphql = "1.9.24"
futures-await-test = "0.3.0"
base64 = "0.12.0"

[tests]
