[package]
name = "graphql-gateway"
version = "0.1.0"
authors = ["Jonathan <jonathan@timada.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
graphql-parser = "0.3.0"
async-trait = "0.1.30"
futures = "0.3.4"
thiserror = "1.0.16"
fnv = "1.0.6"

[dev-dependencies]
lazy_static = "1.4.0"
async-graphql = "1.10.12"
futures-await-test = "0.3.0"
base64 = "0.12.1"

[tests]
